# kuro3d

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  install.md  readme.md
cmake/: assimp.cmake  glad.cmake  glm.cmake  gtest.cmake  imgui.cmake  stb.cmake  third_party.cmake
src/: CMakeLists.txt  main.cc
src/core/: CMakeLists.txt  context.cc  context.h  default_scenario.cc  default_scenario.h  engine.cc  engine.h  engine_test.cc
src/core/atoms/: atom.cc  atom.h  camera_atom.cc  camera_atom.h  scene_atom.cc  scene_atom.h
src/core/base/: CMakeLists.txt  camera_comp.cc  camera_comp.h  camera_comp_test.cc  component_base.h  cube_geometry.h  dependency_helper.h  geometry.h  ioc_container.h  material.cc  material.h  mesh_basic_material.cc  mesh_basic_material.h  mesh_comp.h  mesh_data.h  mesh_flat_material.cc  mesh_flat_material.h  shader.cc  shader.h  shader_handle.h  shader_test.cc  texture.h  vertex.h  visual_comp.h
src/core/elements/: CMakeLists.txt  atom.cc  atom.h  camera_atom.cc  camera_atom.h  camera_pack.cc  camera_pack.h  cube_geometry.cc  cube_geometry.h  mesh.cc  mesh.h  mesh_basic_material.cc  mesh_basic_material.h  mesh_flat_material.cc  mesh_flat_material.h  mesh_pack.cc  mesh_pack.h  model.cc  model.h  model_pack.cc  model_pack.h  pack.cc  pack.h  scene_atom.cc  scene_atom.h  visual_pack.cc  visual_pack.h
src/core/io/: rect_window.h
src/core/loader/: CMakeLists.txt  loader_controller.cc  loader_controller.h  model_loader.cc  model_loader.h  model_loader_test.cc  texture_loader.cc  texture_loader.h  texture_loader_test.cc
src/core/model/: CMakeLists.txt  model_loader.cc
src/core/object/: base_object.cc  base_object.h  mesh.cc  mesh.h  model.cc  model.h
src/core/renderer/: CMakeLists.txt  camera.cc  camera.h  geometry.cc  geometry.h  gl_render_api.cc  gl_render_api.h  gl_render_api_test.cc  material.h  mesh.cc  mesh.h  model.cc  model.h  model_loader.cc  model_loader.h  render_api.h  renderer.cc  renderer.h  renderer_controller.cc  renderer_controller.h  renderer_controller_test.cc  renderer_test.cc  renderer_type.h  renderer_work.h  rendering_pipeline.cc  rendering_pipeline.h  rendering_pipeline_test.cc  shader.cc  shader.h  shader_manager.cc  shader_manager.h  shader_manager_test.cc  shader_program.h  test_main.cc  texture.cc  texture.h  texture_loader.cc  texture_loader.h
src/core/scene/: CMakeLists.txt  camera.cc  camera.h  camera_node.cc  camera_node.h  default_scene.h  node_base.cc  node_base.h  scene_controller.cc  scene_controller.h  scene_manager.cc  scene_manager.h  scene_manager_test.cc  scene_node.cc  scene_node.h  scene_node_test.cc  scene_object.h  scene_utils.h
src/gui/imgui/: CMakeLists.txt  app.cc  app.h  app_test.cc  context.cc  context.h  gui.cc  gui.h  gui_base.cc  gui_base.h  gui_main.cc  gui_main.h  gui_manager.cc  gui_manager.h  gui_store.h  gui_system.cc  gui_system.h  object_inspector.cc  object_inspector.h  scene_explorer.cc  scene_explorer.h  scene_manager.h  scene_viewer.cc  scene_viewer.h  window.h
src/math/: math.h
src/utils/: CMakeLists.txt  dependency_helper.h  ioc_container.h  node_base.h  type_annotation.h  type_annotation_test.cc
